# aoc

./: package.yaml
2015/: aoc2015.cabal  package.yaml  stack.yaml
2015/1/: Main.hs
2015/10/: Main.hs
2015/11/: Main.hs
2015/12/: Main.hs
2015/13/: Main.hs
2015/14/: Main.hs
2015/15/: Main.hs
2015/16/: Main.hs
2015/17/: Main.hs
2015/18/: Main.hs
2015/19/: Main.hs  part2.py
2015/2/: Main.hs
2015/20/: Main.hs
2015/21/: Main.hs
2015/22/: Main.hs
2015/23/: Main.hs
2015/24/: Main.hs
2015/25/: Main.hs
2015/3/: Main.hs
2015/4/: Main.hs  pymain.py
2015/5/: Main.hs
2015/6/: Main.hs
2015/7/: Main.hs
2015/8/: Main.hs
2015/9/: Main.hs
2016/: aoc2016.cabal  package.yaml  stack.yaml
2016/1/: Main.hs  inputderp
2016/10/: Main.hs
2016/12/: Main.hs
2016/14/: Main.hs
2016/2/: Main.hs
2016/3/: Main.hs
2016/4/: Main.hs
2016/5/: Main.hs
2016/6/: Main.hs
2016/7/: Main.hs  example
2016/8/: Main.hs
2016/9/: Main.hs
2016/day20/: package.yaml
2016/day20/src/: Lib.hs
2016/src/: Day1.hs  Day10.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2017/: aoc2017.cabal  hie.yaml  package.yaml
2017/1/: m.py
2017/2/: main.hs
2017/3/: main.hs
2017/4/: main.hs
2017/5/: main.hs
2017/6/: main.hs
2017/7/: main.hs
2017/8/: main.hs
2017/Day09/: Main.hs
2017/Day10/: Main.hs
2017/app/: Main.hs
2017/src/: Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2017/test/: Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs
2018/: aoc2018.cabal  package.yaml
2018/1/: main.hs  part1.hs  part2.hs
2018/10/: main.py  sample
2018/11/: main.cpp  main.py
2018/12/: main.py
2018/13/: main.py  sample3
2018/14/: main.py
2018/15/: main.py
2018/16/: main.py
2018/17/: main.py
2018/18/: main.py
2018/19/: main.cpp  main.py
2018/2/: main.py
2018/24/: main.hs
2018/3/: Day3.hs  Day33.hs  main.cpp  main.hs  main.py
2018/4/: aoc184.hs
2018/5/: glguyripoff.py  main.py
2018/6/: disqualified.py  main.py
2018/7/: main.hs
2018/8/: main.py
2018/9/: linked.py  main.py
2019/: package.yaml
2019/app/: Main.hs
2019/input/: day13_recorded_input
2019/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  EntryPoint.hs  Intcode.hs
2019/test/: RunDocTests.hs
2020/: aoc2020.cabal  hie.yaml
2020/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Main.hs  Parsing.hs
