cabal-version: 2.4
name:          aoc2020
version:       0.1.0.0
synopsis:      My advent of code solutions for 2020
author:        jonatan

executable aoc2020
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
    Day01
    Parsing

  build-depends:
    , base                    ^>=4.14.1.0
    , containers              ^>=0.6.2
    , megaparsec              ^>=9.0.1
    , protolude               ^>=0.3.0
    , qm-interpolated-string  ^>=0.3.0
    , stm                     ^>=2.5.0
    , text                    ^>=1.2.3
    , unordered-containers    ^>=0.2.13
    , vector                  ^>=0.12.1

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    LambdaCase
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables

  default-language:   Haskell2010
