cabal-version: 2.4
name:          aoc2020
version:       0.1.0.0
synopsis:      My advent of code solutions for 2020
author:        jonatan

executable aoc2020
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Parsing

  build-depends:
    , base                    ^>=4.14.1.0
    , containers              ^>=0.6.2
    , criterion               ^>=1.5.9
    , extra                   ^>=1.7.8
    , foldl                   ^>=1.4.10
    , megaparsec              ^>=9.0.1
    , protolude               ^>=0.3.0
    , qm-interpolated-string  ^>=0.3.0
    , silently                ^>=1.2.5
    , split                   ^>=0.2.3
    , stm                     ^>=2.5.0
    , text                    ^>=1.2.3
    , unordered-containers    ^>=0.2.13
    , vector                  ^>=0.12.1

  default-extensions:
    BangPatterns
    BlockArguments
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    ViewPatterns

  default-language:   Haskell2010
