cabal-version: 2.4
name:          aoc2020
version:       0.1.0.0
synopsis:      My advent of code solutions for 2020
author:        jonatan

executable aoc2020
  hs-source-dirs:     src
  main-is:            Main.hs
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists -Wpartial-fields
    -Wno-unused-do-bind -Wredundant-constraints -fhide-source-paths
    -Wno-missing-export-lists

  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Parsing

  build-depends:
    , array                   ^>=0.5.4
    , base                    ^>=4.14.1.0
    , containers              ^>=0.6.2
    , criterion               ^>=1.5.9
    , extra                   ^>=1.7.8
    , foldl                   ^>=1.4.10
    , lens                    ^>=4.19.2
    , megaparsec              ^>=9.0.1
    , protolude               ^>=0.3.0
    , qm-interpolated-string  ^>=0.3.0
    , silently                ^>=1.2.5
    , split                   ^>=0.2.3
    , stm                     ^>=2.5.0
    , text                    ^>=1.2.3
    , unordered-containers    ^>=0.2.13
    , uri-encode              ^>=1.5.0.7
    , vector                  ^>=0.12.1

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:   Haskell2010
